tests/NormalTests/paczka1/fuzzy1/72499045.err
Error in line 9: NjxDEzBtm A237 289,1
Error in line 22: 20eBuH A428 91,7
